--- a/PICO Solder Weight/SolderCutter_Form.resx
+++ b/PICO Solder Weight/SolderCutter_Form.resx
@@ -2544,7 +2544,7 @@
         RK5CYII=
 </value>
   </data>
-  <data name="resource.Image7" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="resource.Image1" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1
         MAAA6mAAADqYAAAXcJy6UTwAAAAHdElNRQfnDBIGCwQYYZLvAAAaL0lEQVR4Xu3daYztd1nAcW73imxS
@@ -5482,4 +5482,10 @@
         DXv8e/y3aw9/n/p967+/Y74sb6wv57z4OIR4me3FA0PYs+f/A52TVvGesUSUAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="SerialPort1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="Timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>148, 17</value>
+  </metadata>
 </root>
