Add form to Edit COM names

--- a/PICO Solder Weight/Form1.resx
+++ b/PICO Solder Weight/Form1.resx
@@ -2254,6 +2254,212 @@
         rkJggg==
 </value>
   </data>
+  <metadata name="MenuStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1151, 20</value>
+  </metadata>
+  <data name="ChangeCOMNameToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAuB0lEQVR4Xu3dC7h/5Zz38dI5OumcSBGSkPCEPIVQKMeQQ2XQ5NjwaGIYQihh5DjROB+KymkqOioh
+        cugZhRCZVCOk079zzfP5avbTbvfZ//3be6/D977v9+u63tc1XKP2Xutee92/9VvrXssAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACg
+        NvdVm6jl//afAABAE76k/lvdqC5Qp6nPqLepF6sd1eZqJQUAACoxNQGYq5ggnK++oQ5Se6htFBMDAAAK
+        NOkEYLauUz9Vn1OvVzurtRQAAEhssROA2bpYxT97X7WdWlEBAIAk+poAzOwqdap6p9pV3VUBAICRDDUB
+        mNnN6kcq7ieIGw25lwAAgAGNNQGY2RJ1otpfxc2FyyoAANCTLBOAmcU9BJ9UT1WrKAAA0KGsE4DpXaPi
+        8cN49HANBaBB8ceK2g3di+3qTrpZi8cOj1WxSNE6CkAj3B8Eaid0r7QJwPRuUqeolyquDACVc38EqJ3Q
+        vZInANO7VsXvsovivQZAhdyBT+2E7tUyAZjeRepQ9SAFoBLuYKd2QvdqnABM7wfq5WpNBaBg7gCndkL3
+        ap8ATBVfEcRbDrdSAArkDmxqJ3SvlQnA9M5QuynuFQAK4g5maid0r8UJwFRxr8ABiscJgQK4g5jaCd1r
+        eQIwVSw0dLi6vwKQlDt4qZ3QPSYAt3WLihUHH64AJOMOWmondI8JgC/uE3icApCEO1CpndA9JgBLLyYC
+        sbgQbycERuYOUGondI8JwGTFegK7KiYCwEjcgUnthO4xAZhfP1SPUQAG5g5Iaid0jwnAwjpRPVgBGIg7
+        EKmd0D0mAAvvZhXbbzMFoGfuIKR2QveYACy+69Vhaj0FoCfu4KN2QveYAHTXX9V+agUFoGPuoKN2QveY
+        AHTfr9ROCkCH3MFG7YTuMQHor1hVcBMFoAPuIKN2QveYAPTbEhUvHFpJAVgEd4BRO6F7TACGKb4W2FkB
+        WCB3YFE7oXtMAIYttvf6CsA8uQOK2gndYwIwfPG0wN4KwDy4g4naCd1jAjBex6qNFYAJuIOI2gndYwIw
+        bpcrrgYAE3AHELUTuscEIEfHq7srALNwBw61E7rHBCBPcW/AixQAwx001E7oHhOAfB2t1lIApnEHC7UT
+        uscEIGe/V9spAP/DHSjUTugeE4C83ahiFcHlFNA8d5BQO6F7TADyd4raSAFNcwcHtRO6xwSgjP6knqKA
+        ZrkDg9oJ3fuIukG57U25ukUdopZXQHPcQUHthH7ECWUztaOKRWkOUvEq2/PVzcrtCxqv09R6CmiKOxio
+        nTC81VTcjb6v+oz6kbpeuf1Dw/Wf6mEKaIY7EKidkMOd1SPVK9Xn1R+U21/Ub0vU8xTQBHcQUDshr7hL
+        fTd1mDpXuf1H/RTbfAUFVM0NfmonlCPWtd9DHaFiiVu3P6m7TlJrK6BabuBTO6FMcZPh9urdiqsD/fU7
+        taUCquQGPbUT6rCpivsHTlU8ZdBtcbXlMQqojhvw1E6ozzoqHj08Q8Vz7m6/0/yKpzReoICquMFO7YS6
+        xX0D8bhhTAbc/qfJi8lUvEcAQDIxO2f1tfmHdjxAHaouU24s0GTFEwKsHAgk8QrF954LC+1ZScXjhScq
+        viJYWCeo1RWAEcUlOXeA0mShbfdT71HxYhw3Pmj2YgXHDRSAgS2r3qfcgUmTB4S4KhBrDPBI4fw6T8V9
+        FgAGEt+/fUK5A5LmFzDdnVS8wCheXOTGC92xC9S9FYCexSeVY5Q7EGn+AbPZWsXLiri5du4uUXGTJYCe
+        rKm+o9wBSAsLmMsmKu58v1G5MUS39kf1IAWgY+uqs5U78GjhAZOKy9yfVjcpN5ZomWX+oh6qAHQkPvnH
+        HbfugKPFBcxXLDvMFYHZu0qxdDDQgTj5n6XcgUaLD1ioeITwKOXGVetdreJlTQAW6M7qdOUOMOomYLH+
+        l/qucuOr5WISsJ0CME+rqnizmTuwqLuALsS6HLG6YLw+142zVrtcPUQBmNAq6mTlDijqNqBLcezur65Q
+        bry12KXq/grAHFZW31LuQKLuA/qwofqCcmOuxS5UcfMkgFmsqL6u3AFE/QT0aQf1C+XGXmv9XsWaCgBm
+        WE4drdyBQ/0F9C2+FjhQXa/cGGypmAytpwBM80HlDhjqN2Ao8T04T/Uss8xP1GoKgOyn3IFC/QcMKZ4W
+        2EfFYjluPLbSN1W81AxoWjw6dLNyBwn1HzCGe6pvKzcmW+lwBTTr0epa5Q4OGiZgLPHq4X3VdcqNzRb6
+        JwU0ZwsVL85wBwUNFzC2LdWPlRuftXeLeqECmrGBYsWwHAEZxCPA71JxQnTjtObiCkg8LglUL5b4PVO5
+        A4GGD8jkceoS5cZqzcXKiVspoFrxrP+xyh0ANE5ANhur7yg3XmsuroqyRgCqdYhyA5/GC8goHpE7QLX2
+        hNAZKr4OAarydNXi93vZAzLbUf2XcmO31t6vgGrEXb6tL/yRNSC7WD//bOXGb629QAHFW0Odp9wgr7G4
+        hHfKjP8uc0AJ7qKOUW4M19g1amsFFCuW/WzpBT9HqHjxyZem/XfZA0oRf0/2V63cF3CBWkcBRXqzcgO7
+        tuLehrhhKf5ABSYAQH9i+fAlyo3n2jpJ8c4AFGdn1cJMPf4QPUtNxwQA6Nc26kLlxnRtHayAYtxLXabc
+        YK6pi9RD1UxMAID+xXoB5yg3rmsqrjDuqoD0VlYt3LEb7/SOP0AOEwBgGGupFhYN+pO6mwJSO1S5AVxT
+        J6q4K3k2TACA4cSNt19RbnzXVDxdFG9QBFJ6gqp9sZ9vqLjKsTRMAIBhxTLjH1VujNfUGxSQTqxhXftL
+        PD6rJrkjlwkAMI54GseN81q6QW2rgFS+ptyAraX4dDHp5TcmAMB4XqtqvhJ5vlpdASm8XLmBWksHqflg
+        AgCMax9V8yTgSAWMbgtV86Icr1fzxQQAGF98MKl5ErCHAkazkorH4dzgLL34w/FKtRBMAIAc/l7VuiDZ
+        FeruChhFze/3/0e1UEwAgDz+TtU6CYhHkqeWIAcG8xhV60EVdxIvBhMAIJeXqFq/DthTAYOJhTd+rdxg
+        LL33q8ViAgDk82rljoHSu1yxSiAG8y7lBmLpfUJ1cTmNCQCQ0zuVOw5KLxYoA3q3lYrFKNwgLLlY5Ker
+        ZTaZAAB5xVU+dyyU3nMV0Js4QX5PucFXcrGOeJfv3GYCAOQVf8e+qNzxUHLxwqD1FdCLGr9DO1mtqLrE
+        BADIbQV1nHLHRMkdoYDObaTiZhM36ErtlypeJ9o1JgBAfvFGz58qd1yU3JMU0KmvKjfYSu3PanPVByYA
+        QBnig82Fyh0bpRZPaMUibUAndlNuoJXa9SrWMegLEwCgHA9RVyt3fJQarw1GJ9ZUFys3yEosFgN5geoT
+        EwCgLE9XNS1sFhMalgnGotX2yMxbVd+YAADl2U+5Y6TUuCEQixLfkcflcje4Siwe/Rli3WwmAECZDlfu
+        OCm1xypgQeL5eDeoSuwHamU1BCYAQJnib8RZyh0rJXauikcegXnZQbkBVWKXqU3VUJgAAOW6h4pFddzx
+        UmKvVcDEYqWsWt7zHzf9PVkNiQkAULYnqlpuCrxCrauAicT7s91AKrF3qKExAQDK98/KHTMl9i8KmFOs
+        jnWRcoOotL6tulzjf1JMAIDyxQ3Dxyh33JRW3My9mQKWKh6TcwOotC5RG6oxMAEA6hBLhf9OuWOntD6t
+        gFndTdWwIlZ8d7ejGgsTAKAej1I3KXf8lFT8XXywAqyYIbqBU1r/pMbEBACoy9uVO35K6xsKuINY9OdG
+        5QZNSZ2hllNjYgIA1CXuJfq+csdQacUj3sDtfFa5wVJS8fXFvdXYmAAA9Ymb6K5U7jgqqTPVECuiohDx
+        6b+G77hepjJgAgDUqZZHpHdRwN98SrlBUlInqiyzWiYAQL2OUu5YKqkfKWCZe6nSv/u/XMXynVkwAQDq
+        tY66VLnjqaSeoNC4Tyg3OEpqL5UJEwCgbnsqdzyVVCyUhoZtokp/3W/Gx1qYAAD1+6Zyx1RJbafQqI8r
+        NyhKKd7yN9Zqf0vDBACo3z1V6QunHavQoPjOvPRP/1nu+p+JCQDQhn9Q7rgqqYcoNOZflRsMpfRjNfaC
+        P7NhAgC0If4GxXP17tgqpSMVGhJ3sV6j3GAooVjTeluVFRMAoB2xvn7J66jEz34fhUbEWvluIJTS4Soz
+        JgBAWz6q3PFVSv+m0IBY0/pC5QZBCcWNf+uqzJgAAG25q/qzcsdYCV2n1lOo3HOVGwCllPXGv+mYAADt
+        eaVyx1gpvV6hciW/0SrzjX/TMQEA2hN/m/6vcsdZCf1elfD3FQv0MOV2fAndojLf+DcdEwCgTY9V7jgr
+        pacpVKrkV/7GSbUUTACA28QruuNlXRv87T/V72jljrUSOkmhQrFiXqkL/8RjKluoUjABAG4Vq+X9TsVY
+        O09tpGoXj9SV/IK1ByhU5q3K7ewSKu0RFSYAwO1P/lO1MgmIv1nTf++S+pBCRVZSlyi3s7MXVy02VSVh
+        AoDWuZP/VC1MAmKp9Xi0zv3+2btKraFQid2V29El9H5VGiYAaFl85z/XWiO/ULXfE/Avyv3uJfQKhUrE
+        jR1uJ2cv3rS1vioNEwC0ammf/GdW+5WAWHL9SuV+9+ydpVCBOCBj7Xy3k7P3dlUiJgBo0XxO/lPVPgmI
+        v2Hu9y6hrRQKV+rNf39RpX4PxQQArZnksv9s1fx1QPwN+6tyv3f2DlYo2J1UrO7kdm723qxK9Qi1WyEB
+        i7WYk/9UNU8C3qHc75y9PyhWBizY45XbsdmL7/7XVgBy6+LkP1VMAmK9ktrEfUylvn49ziEo1KeU26nZ
+        +4ACkNtCvvOfq1rvCfiwcr9v9mL1WBRoZXW5cjs1c7Hq370UgLz6OPlPVeMkINYyKXF1wCVqNYXCxPe7
+        bodm74sKQF59nvynqnES8Hnlftfs7aVQmK8otzOzt40CkFOX3/nPVW33BDxIxVtN3e+auVMUCrKmKnEZ
+        ypMVgJyGPPlPVdsk4JvK/Z6Zi69l11MoxJ7K7cjsPVEByGeIy/6zVdPXAbso9ztm76UKhfiacjsxc/+h
+        llUAchnjk//MarkSEM/VX6Dc75i5YxUKEHdsXqvcTszcKxWAXMb85D+zWq4EvEG53y9z8ZXy6grJPU+5
+        HZi5WCRjLQUgj0wn/6lqmATES4JK/JD2XIXkjlZu52XuMwpAHhlP/lPVMAmIBXbc75a5IxUSW0ldpdzO
+        y9z2CkAOmU/+U5U+CYj3hbjfK3NxbokF5pBU3EXvdlzmfqW4+Q/IIcMNf5NW+o2BZyv3e2XuKQpJfVC5
+        nZa5/RWA8ZXwyX9mJV8JeJ1yv1PmDldI6nzldlrWblC1vgIUKElJn/xnVuqVgJi4xCI77nfK2n8prtgm
+        tKVyOyxzxygA4yrxk//MSr0ScIJyv0/mHqiQTImXk2JVLADjKfmT/8xKvBLwQuV+l8y9ViGZbym3s7L2
+        V7WiAjCOGj75z6y0KwF3VqU9ucWqgMnEifRq5XZW1j6tAIyjxpP/VKVNAj6n3O+RtTjXxCPnSOKxyu2o
+        zD1VARheTZf9Z6ukrwN2Uu53yBxrtyTyTuV2UtauVCwoAQyv5k/+MyvlSsAK6jLlfoesvU0hiR8ot5Oy
+        9kUFYFgtfPKfXpxUH6xK8HnlfoesfU8hgXhDU2nPkj5TARhOS5/8o7jJ+GGqFM9W7vfI2o1qDYWRlbb8
+        7xK1qgIwjBY/+T9ElSRe4x6v3HW/T9a4jyuBA5XbOVn7kgIwDD75lyMer3O/U9berTCyU5XbOVnbXQHo
+        H5/8y/JS5X6vrJ2mMKJ4/j8uqbudk7Gb1boKQL/45F+e9VX8jXS/X8bi3LO8wkhKe6f0TxSAfvHJv1xn
+        Kfc7Zm1rhZG8RrmdkrWDFYD+8Mm/bPE30v2eWdtHYSRfUG6nZO0JCkA/OPmXL/5Gut81a59UGMmvldsp
+        GbtexYsvAHSPk38d4hHpkh4H/LnCCO6qblFup2TsFAWge5z861LSk11xDlpLYWClLQD0RgWgW5z86/Mm
+        5X73rPHV7gjeoNzOyNq2CkB3uNu/TqU93RUTFgzsCOV2RsYuVzwvCnSHk3+94m9lvDHVbYeMxbkIA4v3
+        XbudkbHjFYBucNm/fnHPlNsWGfuZwoBWUSW9AfDtCsDicfJvw7uU2x4Ziye8uMI7oIcqtyOytqsCsDic
+        /NvxdOW2SdbupzCQFym3E7J2NwVg4fjOvy0bKbddsvYshYEcotxOyNjFCsDC8cm/TSVN+N6sMJCvK7cT
+        MvZVBWBhOPm36yjltlHGjlQYyHnK7YSM8YwosDCc/Nu2n3LbKWM8CTCQFdQNyu2EjO2kAMwP3/njccpt
+        q4zFkwBxbkLP7qvcDsjaugrA5Dj5I2yg3PbKGk8CDCAeqXMbP2O/VwAmx8kf0/1Fue2WMa72DmBf5TZ+
+        xk5QACbDd/6Y6Qzltl3G9lbo2fuU2/gZ+7ACMDdO/nAOU277ZexAhZ4do9zGz9g/KABLx8kfs4m/oW4b
+        ZuyzCj37sXIbP2NPVgBmx8kfSxPv2nfbMWOnKfSspJtCNlcAPE7+mMvGym3LjF2g0KO7KLfhM3aj4rlQ
+        wONuf0xiWbVEuW2arfibz1sBexSfqN2Gz9ivFeZvVfXsW/9PVIqTP+bjl8pt14zdQ6En2yu30TN2rML8
+        xMn/JBXb7w3xX6A6XPbHfMXj1G7bZmw7hZ48R7mNnrFDFSYXJ/+T1fRt+FqFevDJHwvxceW2b8Z2V+hJ
+        SY+EvEZhMu7kPxWTgDpw8sdCxat23TbO2KsUevJu5TZ6xp6nMLfpl/1ni68DysZlfyzGXspt54wdoNCT
+        Tym30TP2eIWlW9on/5lxJaBMfPLHYj1GuW2dMb767dHXlNvoGXuQwuzmc/KfiklAWTj5owv3Um57Z+xz
+        Cj0p6cUQ6yt4k1z2ny2+DigDl/3RlZLWfzlOoSfnKrfRs3WzYkEIbzEn/6mYBOTGyR9du165bZ+tMxV6
+        crFyGz1blyrcURcn/6mYBOTEyR99uES57Z+tXyn05FrlNnq2zlG4vS5P/lMxCciFkz/6UsrV3z8r9GBF
+        5TZ4xk5VuM1CbvibNG4MzIEb/tCn7yi3H7J1k7qTQsfWUm6DZ+wIhVv1efKfiknAuDj5o29fV25fZCzO
+        VehYSa+FPEyhn8v+s8XXAePgsj+G8Enl9kfGNlLo2H2U29gZ+4Bq3RCf/GfGlYBh8ckfQ3mfcvskYzEp
+        Rse2Vm5jZ+wQ1bIhP/nPjCsBw+CTP4b0duX2S8biwyo6Fq9ZdBs7YzFYWzXmyX8qJgH94uSPoZX0QqAH
+        KHTsccpt7Iy9SbUow8l/KiYB/eDkjzHsr9z+yRhfE/XgCcpt7Iztp1qT6eQ/FZOAbnHyx1ji9epuH2Xs
+        EQod21m5jZ2xV6uWZDz5T8UkoBuc/DGmVyi3nzK2vULHdlFuY2dsb9WKzCf/qZgELA4nf4ztpcrtq4zx
+        KvgePE25jZ2xPVULSjj5T8UkYGE4+SOD+Jvq9lfGnqzQsWcqt7Ez9lxVu5JO/lMxCZgfTv7IIv6mun2W
+        sacrdOwZym3sjD1H1azEk/9UTAImw8kfmeyu3H7LWHxYRceeotzGztgLVa1KPvlPxSRg6Tj5I5u9lNt3
+        GXuqQsdKegzwxapGNZz8p2IS4HHyR0b7KLf/MsY9AD3YQbmNnbGXqdrUdPKfiknA7XHyR1b7KrcPM/ZE
+        hY49UrmNnbEYrDWp8eQ/FZOAW3HyR2YlrQS4o0LHHqrcxs5YTSsBxsl/6Lf6DV3rbxHkrX7IrqR3AcTV
+        anTsgcpt7Iy9UdWg5k/+M2v1SgCf/FGCdyi3PzO2rULH7qfcxs7YW1UNSpp1d1FrVwL45I9SvFe5fZqx
+        +LCKjm2m3MbO2HtUDVZUX1Xud6y1ViYBnPxRkg8pt18zFscWOraxchs7Y/+marGC+opyv2et1f51AJf9
+        UZrDldu3GdtAoWNrK7exMxafmmvClYB68MkfJfqycvs3Y2sodGw5dbNyGzxbp6vaMAkoHyd/lOo05fZx
+        xpZX6EEc0G6DZ+tnqkZ8HVAuLvujZL9Ubj9n6yqFnvxGuY2erYtUrZgElIeTP0pXyoe/3yv05IfKbfRs
+        XadqxiSgHJz8Ubr4+vEW5fZ3ts5W6Mnxym30jMUiOjVjEpAfJ3/UoKQnwE5R6MnnldvoGdtU1Y4bA/Pi
+        hj/UYmvl9nnGjlboyQeV2+gZ2161gElAPpz8UZN4u57b7xmL9QrQk1hi1230jL1QtYKvA/Lgsj9qs6dy
+        +z5jByr0pKR3QtfyQqBJcSVgfHzyR41ep9z+z9grFXryfOU2esb+VbWGScB4OPmjViW9B+BZCj2J79Xd
+        Rs/YcapFfB0wPC77o2bfUm4cZOyRCj2JO+vdRs/YOapVTAKGw8kftStpfLfw9Ndo4sRyk3IbPlutLwnJ
+        1wH947I/areSKuVvflT7+i+jK+kP3vqqZVwJ6A+f/NGC+ys3HjL2R4WefVe5jZ+xx6rWMQnoHid/tOKp
+        yo2JjP1AoWdfUG7jZ4xHQm7FJKA7nPzRkv2UGxcZO1KhZwcpt/Ez9hGFWzEJWDxO/mjNx5QbGxk7WKFn
+        L1du42fs2wq3YRKwcJz80aJTlRsfGYtzE3r2ZOU2fsb+pHB7PB0wf9ztj1ZdrNwYydjOCj3bUrmNn7X1
+        FG6PScDkOPmjVRsqN0aytplCz+K50BuV2wEZe4zCHTEJmBsnf7RsF+XGScauU8spDOCXyu2EjMWLLOBx
+        T8Ds+M4frXubcmMlYz9TGMjRyu2EjH1JYXZMAu6Ikz+wzDLHKzdeMnaUwkBKmhleoLB0TAJuw8kfuNWl
+        yo2ZjL1DYSDPVm4nZG0DhaXjngC+8wemxETYjZmsvUBhIA9QbidkbVeFubV8JYBP/sBtdlNu3GRtK4WB
+        xKfFG5TbERk7UGEyLV4JiNUt+eQP3KakFV+vV/F3CwP6uXI7I2MnKEyuxSsBrcQnf0ziZOXGT8bOVhhY
+        3F3vdkbGLlc8Izo/LV4JqD0++WMS8QHgKuXGUMY+qzCwf1ZuZ2SNTz3zxySgnjj5Y1KPVm4MZY21Xkaw
+        k3I7I2uvV5g/vg4oPy77Yz7eqtw4ytoOCgNbU92i3A7J2IkKC8MkoNw4+WO+vqvcWMrYzWp1hRGcp9xO
+        ydi1ahWFhWESUF6c/DFfq6mSnvCKm9Exkk8rt1OyxouBFodJQDlx8sdCxJopbjxl7VMKI3m5cjsla6wH
+        sHhMAvLHyR8L9QHlxlTWXqEwkm2U2ylZO1Nh8Xg6IG/c7Y/FKGl9l+jhCiOJT4NLlNsxGYsbRngvQDe4
+        EpAvPvljMTZSblxl7WoVf4cwojOU2zlZ+zuFbnAlIE988sdixd9GN7aydpLCyN6j3M7J2tcVusOVgPHj
+        kz+6cJxy4ytrb1YY2dOV2zlZu0bdWaE7XAkYLz75owuxrku8VMeNsaw9VmFkMXBuUm4HZe2ZCt3iSsDw
+        8ckfXdlDuTGWtVirYFWFBH6g3E7K2mcUusckYLg4+aNLX1NunGXtdIUk3qHcTspa/PHk7tF+MAnoP07+
+        6FKs/hcrpbqxlrW3KCQRK+y5nZS5xyv0g3sC+ovv/NG15yo31jK3nUIS8Qc/nsl0OyprLCHZL64EdB+f
+        /NGHo5Ubb1m7UnEFN5lvKbezshYTlrso9IdJQHdx8kcf4ka60j688Sh3Qvspt7My93yFfvF1wOLjsj/6
+        8hzlxlzm9lVIJv5AuZ2VueMV+seVgIXHJ3/06QTlxl3m7q2QzJ3UpcrtsKzF+gUbKvSPKwHzj0/+6NM9
+        VbwfxY29rP1SIalPKrfTMvcahWFwJWDy+OSPvr1NubGXuUMUktpVuZ2WuZ8qDIcrAXPHJ3/0bTl1oXLj
+        L3PxyDmSWkWVdkdptK3CcJgEzB4nfwzhycqNv8xdrnj8L7mjlNt5mWNp4OHxdcAd47I/hlLisfc5heTi
+        0Tq38zJ3nVpPYVhMAm6Lkz+GsoGKl+m4cZi5Zygkt4Yq7bWS0f4Kw2MSwMkfw3qDcuMwc0sUr3EvRGmr
+        Aka/VfEoI4bX8j0BfOePIcXNf+crNxYzF8sVoxD7KLcTsxc3xmAcLV4J4JM/hvZs5cZi9nZXKEQsrlPa
+        AhPRsQrjaelKAJ/8MYYfKjceMxevKo6vllGQ05TbmZm7RT1AYTwtTAI4+WMMOyg3HrP3ZYXCvES5nZk9
+        HgkcX81fB3DZH2OJK5xuTGbvaQqFWV3FnZtuh2buRhVrZGNcNU4COPljLPdTJX4tG1fLVlIo0BeU26nZ
+        +4DC+GqaBHDyx5hKfE9L9DGFQu2k3E7NXly5YGGgHGq4J4Dv/DGmjVSJa7NE2ysUKp45vUi5HZu9tyvk
+        UPIkgJP/0u1WSI9QpTpYubGZvd+oZRUKFq9vdDs3e/GHO+5jQA4lTgI4+c/NbbeMfUmVKK5kXqXc75S9
+        NykUbkvldm4JHaCQR0n3BPCd/2TctstYqROAQ5X7fbIXNyzeXaECP1FuJ2cvZs7cC5BLCZMATv6Tc9sv
+        YyVOADZR8aIz9/tk7ziFSrxKuZ1cQu9VyCXz1wFc9p8ftw0zVuIEoNQ7/6NnKVRiNXWFcjs6e7EMJZei
+        8sl4JYBP/vPntmPGSpsA3FfFmibud8le3Dgexzcq8mHldnYJHaaQT6ZJACf/hXHbMmOlTQCOUe73KCFu
+        /qvQFirW2nc7PHs3qZhRI58MkwBO/gvntmfGSpoAxFgs9W9t3LOwvkKFTlFup5fQkQo5jXlPAN/5L47b
+        phkraQJwknK/Qwl9SqFSz1Bup5cSq1LlNcYkgJP/4rntmrFSJgBPUu7nLyWOp4rFyoAXKLfjS+gctbxC
+        TkN+HcBl/264bZuxEiYA8dKc85T7+UvodIXKvVG5nV9KL1fIa4hJACf/7rjtm7ESJgD/rNzPXko8+teA
+        dVU8WucGQAnFZd91FPLqcxLAyb9bbhtnLPsE4B7qauV+9hL6veLqaiNKXqAi+pBCbn3cE8B3/t1z2zlj
+        2ScAWR6HXWivV2hEPBIYaz27gVBC8VjgVgq5dTkJ4OTfD7etM5Z5ArCzcj9zKV2j1lZoyFHKDYZS+p66
+        k0JuXUwCOPn3x23vjGWdAKysfq3cz1xKH1FozINVqYtVTPVqhfwWc08A3/n3y23zjGWdAJR+498N6p4K
+        DfqmcoOilOJtgfHGLeS3kCsBfPLvn9vuGcs4AbiPisvn7uctJZZZb1gsrOMGRUmdrJZVyG8+VwL45D8M
+        t+0zlm0CEF8/fke5n7WU4tP/pgoNK30QRy9UKMMkkwBO/sNx2z9j2SYAcde8+zlL6mMKjSt96croz4oX
+        WJRjaZMATv7DcvsgY5kmAPEUVclrqUR8+sffxOXznyg3SErqywrliHsCvqam70O+8x/e9O2fuSwTgJi8
+        /li5n7GkDlfA3zxNuUFSWnsplGP6JICT/zhmHkNZyzIBeItyP19Jxaf/zRTw/8Vz9W6wlNSV6l4K5YhJ
+        wKcVJ/9xuOMoYxkmADFG4+Tpfr6S+oQCbufRyg2W0jpLxWU6AHNzx1DGxp4AxJv+/kO5n62kYhXVzRVw
+        B8cqN2hK660KwNzc8ZOxsScAH1Du5yotvvvHrGJ9/ZLfETBV/A6xxgGApXPHT8bGnADsptzPVFqxcNqG
+        CpjVZ5UbPKX1W7WmAjA7d+xkbKwJQKz2d4VyP1NpvUkBSxXrQl+n3AAqrW8oXhgEzM4dNxkbYwIQL/qp
+        4RHp6EK1qgLmdKhyg6jE3qgAeO6YydgYE4D4vtz9LCX2fAVMZD0Vj9S5gVRacdfr4xWAO3LHTMaGngDs
+        qdzPUWI/VLwvBfPyOuUGU4n9RbHsJXBH7njJ2JATgC3VEuV+jhKLR7yBeYln6c9VbkCVWMyC41leALdx
+        x0rGhpoArKF+odzPUGIskY4Fe5xyg6rUPq4A3MYdJxkbYgKwvDpBuX9/icXN3Cz5i0WJGaQbXKX2fxSA
+        W7ljJGNDTAA+rNy/u9TerYBF2VhdrdwAK7FYJChefgTAHyMZ63sCEB8M3L+31C5WrIOCTsSjdG6Qldo1
+        6uEKaJ07PjLW5wTgSSqeFnL/3lLjQw46E29sO0+5gVZqMUO+uwJa5o6NjPU1AdhaxRK57t9ZakcroFNP
+        UG6wldxP1V0U0Cp3XGSsjwnARuo/lfv3lVosW3w3BXTuSOUGXckdp3h9MFrljomMdT0BWF3Vsszv9PZR
+        QC/WUX9UbuCVXFwyW04BrXHHQ8a6nACsok5V7t9Tcmcq3n2CXu2u3OArvY8qoDXuWMhYVxOAuNr378r9
+        O0ruehUrGAK9O0a5QVh6ByqgJe44yFgXE4C4yneEcv/80jtAAYPYUF2m3EAsvf0U0Ap3DGRssROAeBlO
+        TW/3m148oRWvLgYGs5dyg7H0blEvVkAL3DGQscVOAD6k3D+39GL9gu0UMLi4g94NytKLScDLFFA7N/4z
+        tpgJwLuU+2fWEF9bYjT3UPHcqRuYpRdLBu+tgJq5sZ+xhU4A3qLcP6+G4g2nPMKMUdX6VUDElQDUzo37
+        jM13AhDf+R+i3D+rhuL9LJsrYHSfV26Q1lBMAvZVQI3cmM/YfCYAcfI/VLl/Ti29RAEpxHK6v1JuoNbS
+        GxRQGzfWMzbpBCAe9fuUcv+MWvqKAlLZVt2o3ICtpfg+EaiJG+cZm2QCsJL6qnL/+1q6SK2tgHRqe22w
+        6xNqeQXUwI3xjM01AVhVfUu5/20txdeROysgpViH+hTlBm9NxUqILLyBGrjxnbGlTQDWVN9V7n9XU+9V
+        QGrxKso/KzeAa+p0tZYCSubGdsZmmwBspn6u3P+mpuLNhfEVB5DeU1VcrnIDuaZ+pnj3NkrmxnXG3ATg
+        UepS5f7/ayo+UN1TAcU4WLnBXFsXqocooERuTGds5gTgeeo65f5/ayqW+n28AooS9wPUulTwzK5VL1BA
+        adx4ztjUBCCe8d9ftXCFMYrfFSjSXdX5yg3s2oo/SAepmPgApXBjOWMxAYjvwD877b+rvXjePyY8QLG2
+        VkuUG+A1drS6swJK4MZwxuLpohbu9J/qXLWaAooXl8fdIK+1s9UmCsjOjV8at8vVfRVQjfcrN9hrLe7c
+        fZICMnNjl8Yrvkp8pgKqEqvnnarcoK+1OJjjpSS8shNZuXFL4/VWBVRpPfU75QZ+zcWiQawXgIzceKVx
+        ipv+uIkYVdtCXabcAVBzf1Ks441s3Fil4fuh4uZhNGEH1cIiHjO7Wb1TraiADNw4pWH7tVpXAc14jmpl
+        MY+ZxRLCD1bA2Nz4pOGKm4Xvo4DmtPD64Nm6QR2gllPAWNzYpGG6Rj1SAc36iHIHRyt9T22ugDG4MUn9
+        F18HPkMBTYvHA7+p3EHSSlepv1cs+4mhufFI/fdqBUBiyct437U7UFrqNHV/BQzFjUPqt/cqANPEGgG/
+        UO6Aaanr1YFqFQX0zY1B6q8jFM/6A0YsltPK2wPnKrbDTgrokxt71E+x0A+rggJLsam6ULkDqMW+oDZU
+        QB/cmKPu+3fF+h/ABOKu+EuUO5Ba7Gp1kLqLArrkxht124lqZQVgQlupWCTDHVCt9ge1t+I7RHTFjTPq
+        ru8olvgFFuDh6krlDqyWO0v9bwUslhtf1E3fVVy1AxYhTnRxCdwdYK33ZXU/BSyUG1e0+L6vVlcAFulh
+        6i/KHWitFyuKfUndVwHz5cYULa6fqrsqAB15qOKegNm7SX1a3VsBk3JjiRbejxQnf6AHW6iLlDvw6Nam
+        rgjwhjFMwo0hWlixkucaCkBP4lI36wTMXUwEvqF42xiWxo0dmn9xrLF6JzCATdRvlDsQ6Y7FZck9FK8e
+        xkxuvND8+pxihT9gQLE63jnKHZDki+WF91U8l4wpbpzQ5H1IsS4HMIL1VXy6dQcmzV7cTPk+FfdUoG1u
+        fNBkvVkBGFF8mo3v39wBSnMXE6hYXZCrAm1yY4KW3i3qNQpAAsurw5Q7WGmy/qo+qB6k0A43Fmj2blDP
+        VwCSie+34+53d+DS5J2rDlDxUibUze1/aiegKs9S1yo32Gn+TU0G4jXNqI/b59ROQHUeo+KSthvwtLDi
+        ysq31avUZgp1cPua2gmo0pbqd8oNelp8P1eHqJhsxT0YKJPbt9ROQLXWVicpN/Cpuy5XsfzwXioWaUI5
+        3P6kdgKqFqvfHaTi0R13AFD3XaxiQhA3ZW6jllXIye0/aiegCc9TS5Q7CKjf4gVOX1Rx/8Cj1F0UcnD7
+        i9oJaEY84/5b5Q4EGra4ShALOMUTBruodRSG5/YNtRPQlLgv4ATlDgYat8tUrEz4GbW/2k3FVwi8Za0/
+        bj9QOwHNibvW4w527gsoo1h97SMK3XPbm9oJaNaOKi5FuwODchU3FaJ7bltTOwFNW08dr9zBQXliAtAP
+        t62pnYDmxWNq8cja9codJDR+TAD64bY1tROA//Ew9WvlDhQaNyYA/XDbmtoJwDSrq88pd7DQeDEB6Ifb
+        1tROAIw9FS8UyhMTgH64bU3tBGAWG6hjlDtwaNiYAPTDbWtqJwBziAVp/qTcAUTDxASgH25bUzsBmMD6
+        6ijlDiLqPyYA/XDbmtoJwDxwNWCcmAD0w21raicA8xRXA45U7oCifmIC0A+3ramdACzQDuoc5Q4s6jYm
+        AP1w25raCcAirKBiFcErlTvAqJuYAPTDbWtqJwAd2EjFa2x5w2A/MQHoh9vW1E4AOsTXAv3EBKAfbltT
+        OwHoWHwt8DrFSoLdxQSgH25bUzsB6Mld1UHqGuUOPpo8JgD9cNua2glAzzZWh6mblDsIae6YAPTDbWtq
+        JwAD2ULFicwdiLT0mAD0w21raicAA3uEOl25A5J8TAD64bY1tROAESyrdlFnKndg0u1jAtAPt62pnQCM
+        bDv1DeUOULo1JgD9cNua2glAEo9UMRFgMaE7xgSgH25bUzsBSOaBKlYV5KmB22IC0A+3ramdACR1f/Vx
+        tUS5g7elmAD0w21raicAya2h4oVDv1XuIG4hJgD9cNua2glAIe6kdlQt3ifABKAfbltTOwEo0H3Uoeoq
+        5Q7s2mIC0A+3ramdABQsvh54mfq+cgd4LTEB6Ifb1tROACpxX3WAqvFeASYA/XDbmtoJQGXiXoFYXChe
+        QFTLVwRMAPrhtjW1E4CKra5erE5SNyr3R6CEmAD0w21raicAjVhbvUjFUwTXKvcHIWtMAPoR25XaDUCD
+        VlXxMqJYcfAK5U66meKPFQAAHVtZ7ao+of6g3Al47JgAAADQs83U3ipOupcrd0IeOiYAAAAMaDm1jdpf
+        nahuUO4E3XdMAAAAGNFa6inqQHWyulK5E3bXMQEAACCRuEKwpdpDxdLEP1I3K3cSX0xMAAAASG5N9UT1
+        jyqeMvixWuxjh0wAAAAo1EYqHj2M+wliYhBXCyadGDABAACgIiuomBjEjYa7qZgcxBLGccPh+Wpq9UIm
+        AAAANGR5dU8VLzoCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAABALZZZ5v8BR9KVREQW+UkAAAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="MenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>483, 17</value>
   </metadata>
@@ -2355,6 +2561,9 @@
   </metadata>
   <metadata name="TimerPLC.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1046, 20</value>
+  </metadata>
+  <metadata name="ContextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1266, 20</value>
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
